# VLMcar

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codex_task_index_zero_shot_rc_car.md  codex_zero_shot_rc_car_repo_plan.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: placeholder.yml
backend/app/: main.py
contracts/: ack_ready.schema.json  command_response.schema.json  frame_request.schema.json  session.schema.json  telemetry.schema.json
docs/: api.md  architecture.md  firmware.md  safety.md  simulation.md  testing.md
docs/adr/: 0001-monorepo.md  0002-frame-command-protocol.md  0003-ollama-adapter.md  0004-safety-first-motion-pulses.md
docs/findings/: _left_turn_findings.json  _left_turn_v3_findings.json  findingV1.md  findingV2.md  findingV3.md  findingV4_eval.md  findingV5_accuracy_improvement.md
docs/modules/: README.md  backend-app-api.md  (+12 more)
firmware/: README.md  platformio.ini
prompts/: decision_prompt_v1.txt  decision_prompt_v2.txt  decision_prompt_v3.txt  decision_prompt_v4.txt  decision_prompt_v5.txt  json_schema_decision.json  json_schema_decision_v3.json  json_schema_decision_v4.json  json_schema_decision_v5.json  system_prompt.txt  system_prompt_v3.txt  system_prompt_v4.txt  system_prompt_v5.txt
simulator/: __init__.py  cli.py  control_client.py  episode.py  fallback.py  maps.py  mock_backend.py  replay.py  webcam.py  world.py
tools/: __init__.py  check_env.py  eval_model_benchmark.py  generate_session_pdf.py  simulate_session.py  smoke_test_backend.py  smoke_test_ollama.py
(+82 files in other folders)
